--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,14 @@
   </head>
 
   <body>
+    <section id="main">
+      <h1 id="title">Dr. Norman Borlaug</h1>
+      <div id="img-div">
+        <img src="" alt="" id="image">
+        <figcaption id = "img-caption">Dr.Norman's image</figcaption>
+
+      </div>
+    </section>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
