--- a/index.htm
+++ b/index.htm
@@ -9,14 +9,18 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-  <section id="main">
-    <h1 id="title">Dr. Norman Borlaug</h1>
-    <div id="img-div">
-      <img src="" alt="" id="image">
-      <figcaption id="img-caption">Dr.Norman's image</figcaption>
-  
-    </div>
-  </section>
+    <section id="main">
+      <h1 id="title">Dr. Norman Borlaug</h1>
+      <div id="img-div">
+        <img src="images/Dr Norman.jpg" alt="" id="image" />
+        <figcaption id="img-caption">Dr.Norman's image</figcaption>
+      </div>
+      <p id="tribute-info">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis,
+        quibusdam!
+      </p>
+      <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" id="tribute-link" target="_blank"></a>
+    </section>
     <script src="js/index.js"></script>
   </body>
 </html>
