--- a/index.htm
+++ b/index.htm
@@ -11,13 +11,41 @@
 
     <section id="main">
       <h1 id="title">Dr. Norman Borlaug</h1>
+
       <div id="img-div">
         <img src="images/Dr Norman.jpg" alt="" id="image" />
         <figcaption id="img-caption">Dr.Norman's image</figcaption>
       </div>
       <p id="tribute-info">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis,
-        quibusdam!
+        History of Dr.Norman
+        <div  class = "text-info">
+        <h2>Early life, education and family</h2>
+        <p>Borlaug was the great-grandchild of Norwegian immigrants. Ole Olson Dybevig and Solveig Thomasdatter Rinde, of Feios, a
+        small village in Vik kommune, Sogn og Fjordane, Norway, emigrated to Dane County, Wisconsin, in 1854.[citation needed]
+        The family eventually moved to the small Norwegian-American community of Saude, near Cresco, Iowa. There they were
+        members of Saude Lutheran Church, where Norman was both baptized and confirmed.</p>
+        </div>
+
+        <div class = "text-info">
+          <h2>Career</h2>
+          <p>From 1942 to 1944, Borlaug was employed as a microbiologist at DuPont in Wilmington, Delaware. It was planned that he
+          would lead research on industrial and agricultural bacteriocides, fungicides, and preservatives. However, following the
+          December 7, 1941, attack on Pearl Harbor Borlaug tried to enlist in the military, but was rejected under wartime labor
+          regulations; his lab was converted to conduct research for the United States armed forces. One of his first projects was
+          to develop glue that could withstand the warm salt water of the South Pacific. The Imperial Japanese Navy had gained
+          control of the island of Guadalcanal, and patrolled the sky and sea by</p>
+        </div>
+
+        <div class = "text-info">
+          <h2>Wheat research in Mexico</h2>
+          <p>The Cooperative Wheat Research Production Program, a joint venture by the Rockefeller Foundation and the Mexican
+          Ministry of Agriculture, involved research in genetics, plant breeding, plant pathology, entomology, agronomy, soil
+          science, and cereal technology. The goal of the project was to boost wheat production in Mexico, which at the time was
+          importing a large portion of its grain. Plant pathologist George Harrar recruited and assembled the wheat research team
+          in late 1944. The four other members were soil scientist William Colwell; maize breeder Edward Wellhausen; potato
+          breeder John Niederhauser; and Norman Borlaug, all from the United States.[22] During the sixteen years Borlaug remained
+          with the project, he bred a series of remarkably successful high-yield, disease-resistant, semi-dwarf wheat.</p>
+        </div>
       </p>
       <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" id="tribute-link" target="_blank"></a>
     </section>
